--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <a href="#"><strong>Esqueci minha senha</strong></a>
         </div>
 
-        <a href="./home/home.html">
+        <a class="enterHome" href="./home/home.html">
           <button>Entrar</button>
         </a>
         
