--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@
           <label for="rememberPassword">Lembre-me</label>
           <a href="#"><strong>Esqueci minha senha</strong></a>
         </div>
-
-        <a class="enterHome" href="./home/home.html">
-          <button>Entrar</button>
-        </a>
+        
+        <a class="enterHome" href="./home/home.html">Entrar</a>
         
         <p>Não tem uma conta?<a href="#"><strong>Registre-se</strong></a></p>
         </div>
