--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="logo">
       <img src="images/logo.svg" alt="Logo" />
     </header>
-
+    
     <div class="container">
       <div class="headerLogin">
         <img src="images/log-in.svg" alt="Image Login" />
@@ -35,6 +35,7 @@
             type="email"
             name="emailClient"
             id="email"
+            autocomplete="off"
             placeholder="Digite seu e-mail"
           />
         </div>
